# Cloud-FinOps-Optimizer

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  validate.py
server/: Dockerfile  __init__.py  app.py  environment.py
